# dofbot-controller

./: .gitignore  inference_server.py  lerobot_inference_server.py  requirements.txt  roslibpy_commands.md
docs/: PRETRAINED_QUICKSTART.md
dofbot_pro_ws/: REAL_ROBOT_SETUP_PLAN.md  roslibpy_commands.md  run_commands.md
dofbot_pro_ws/devel/: .catkin  .rosinstall  _setup_util.py
dofbot_pro_ws/src/arm_moveit_demo/: CMakeLists.txt
dofbot_pro_ws/src/dofbot_policy_bridge/: CMakeLists.txt  package.xml
dofbot_pro_ws/src/dofbot_policy_bridge/config/: gamepad_config.yaml
dofbot_pro_ws/src/dofbot_policy_bridge/dofbot_dataset/: episode_task_map.json
dofbot_pro_ws/src/dofbot_policy_bridge/launch/: data_collection.launch  keyboard_collection.launch  policy_inference.launch
dofbot_pro_ws/src/dofbot_policy_bridge/scripts/: data_collector.py  gamepad_teleop.py  keyboard_teleop.py  policy_bridge.py  read_episode.py  robot_controller.py  test_gamepad.py
dofbot_pro_ws/src/dofbot_pro_KCF/: CMakeLists.txt
dofbot_pro_ws/src/dofbot_pro_RGBDCam/: CMakeLists.txt
dofbot_pro_ws/src/dofbot_pro_apriltag/: CMakeLists.txt
dofbot_pro_ws/src/dofbot_pro_color/: CMakeLists.txt
dofbot_pro_ws/src/dofbot_pro_config/: CMakeLists.txt
dofbot_pro_ws/src/dofbot_pro_info/: CMakeLists.txt  package.xml
dofbot_pro_ws/src/dofbot_pro_kcf/: package.xml
dofbot_pro_ws/src/dofbot_pro_kcf/include/dofbot_pro_kcf/: CMakeLists.txt  KCF_Tracker.h
inference/: constants.py  lerobot_inference_server.py  policy.py
tools/: replay_episode.py  replay_on_robot.py
training/: convert_to_lerobot.py  dataset_utils.py  train_act.py  train_pi0.py  train_smolvla.py
(+210 files in other folders)
