<?xml version="1.0"?>
<package format="2">
  <name>dofbot_policy_bridge</name>
  <version>0.1.0</version>
  <description>Bridge between Dofbot Pro and open robot policy models (LeRobot / ACT / pi0)</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>yahboomcar_msgs</depend>
  <depend>dofbot_pro_info</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-cv-bridge</exec_depend>
</package>
